@@ -4846,4 +4846,8 @@ margin: 1rem;
       padding-left: 0;
       padding-right: 0;
     }
+
+    .col-sm-6 .footer-logos span {
+      display: none;
+    }
 }
