@@ -179,10 +179,10 @@
   <div class="col-sm-6">
     <div class="footer-logos">
      <ul class="list-footer-logos">
-        <li><a href="#"><span>EU</span><img src="{{ site.static }}/img/logo-eu.png" alt="EU flag" height="48" width="auto"></a></li>
-        <li><a href="#"><span>EEA</span><img src="{{ site.static }}/img/logo-eea.png" alt="EEA Logo" height="60" width="auto"></a></li>
-        <li><a href="#"><span>CHM</span><img src="{{ site.static }}/img/logo-chm.png" alt="CHM Logo" height="66" width="auto"></a></li>
-        <li><a href="#"><span>UN Decate on Biodeversity</span><img src="{{ site.static }}/img/logo-undb.png" alt="United Nations Decade on Biodiversity Logo" height="48" width="auto"></a></li>
+        <li><a href="http://europa.eu/"><span>EU</span><img src="{{ site.static }}/img/logo-eu.png" alt="EU flag" height="48" width="auto"></a></li>
+        <li><a href="http://www.eea.europa.eu/"><span>EEA</span><img src="{{ site.static }}/img/logo-eea.png" alt="EEA Logo" height="60" width="auto"></a></li>
+        <li><a href="https://www.chm-cbd.net/"><span>CHM</span><img src="{{ site.static }}/img/logo-chm.png" alt="CHM Logo" height="66" width="auto"></a></li>
+        <li><a href="https://www.cbd.int/2011-2020/"><span>UN Decate on Biodeversity</span><img src="{{ site.static }}/img/logo-undb.png" alt="United Nations Decade on Biodiversity Logo" height="48" width="auto"></a></li>
       </ul>
     </div>
   </div>
