@@ -3,6 +3,8 @@ Changelog
 
 1.2 - (unreleased)
 ------------------
+- Added links to footer
+  [iulianpetchesi #85140]
 - Added pdf cover & styling
   [iulianpetchesi #85140]
 - Prevent unwanted slicing of content at pdf export
